Add Product CRUD

--- a/.env
+++ b/.env
@@ -16,4 +16,4 @@ SERVICE = gmail
 EMAIL_PORT = 587
 SECURE = true
 USER = spotlesszone246@gmail.com
-PASS = lkptuspnlxqnyvdt
+PASS = amqtxlkkjzhluisv
